ITS-9: Add extra sheet export | Portfolio